Использовался Stream API для выполнения задания, и все комментарии были сделаны.